tests/compile_fail/invalid_image_layer_list_empty.rs
use surgeist_style::ImageLayerList;

fn main() {
    let _layers = ImageLayerList { layers: Vec::new() };
}
